--- a/public/kitchen.html
+++ b/public/kitchen.html
@@ -6,7 +6,7 @@
 
     <link href="img/kitchen.ico" rel="icon" type="image/x-icon" />
 
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="fonts/font.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
